# ClimateSet

./: generate_test_outputs.py  pyproject.toml  run_emulator_jean_zay.sh
emulator/configs/: main_config.yaml
emulator/configs/datamodule/: climate.yaml
emulator/configs/model/: archesclimate.yaml
emulator/src/core/models/: archesclimate.py  basemodel.py
emulator/src/data/: climate_dataset.py  constants.py
emulator/src/utils/: interface.py  lr_scheduler.py  utils.py
